Fixing alignment for resultsDiv.

--- a/css.css
+++ b/css.css
@@ -23,10 +23,11 @@ img{
     border-radius: 5px;
     border-style: solid;
     border-width: 2px;
-    width: 5%;
-    height: 10%;
+    width: 50px;
+    height: 100px;
     margin-left: auto;
     margin-right: auto;
     color: #663d00;
     text-align: center;
+    padding-top: 10px;
 }
